# contract-new-project-template

./: .gitignore  CODEOWNERS  Cargo.toml  README  README.md  build_all.sh  build_all_docker.sh  build_docker.sh  contracts.json  deploy_all.sh  test_all.sh
.devcontainer/: devcontainer.json
.github/workflows/: deploy-dev.yml  deploy-production.yml  test.yml  undeploy-dev.yml
airdrop/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
airdrop/src/: lib.rs  models.rs
fungible-token/: Cargo.toml  build.sh
fungible-token/ft/: Cargo.toml
fungible-token/ft/src/: lib.rs
fungible-token/test-contract-defi/: Cargo.toml
hello-utility/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
hello-utility-rust/: Cargo.toml  deploy.sh
hello-utility/src/: lib.rs
lockable-fungible-token/: Cargo.toml  build.sh
lockup/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
lockup-factory/: Cargo.toml  README.md  build.sh  deploy.sh
lockup-factory/.cargo/: config.toml
lockup-factory/src/: lib.rs  types.rs  utils.rs
lockup-factory/src/tests/: test_utils.rs
lockup/src/: foundation.rs  foundation_callbacks.rs  getters.rs  internal.rs  lib.rs  owner.rs  owner_callbacks.rs  types.rs
lockup/src/tests/: test_utils.rs
lockup/tests/: spec.rs
multisig/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
multisig-factory/: Cargo.toml  README.md  build.sh  deploy.sh
multisig-factory/src/: lib.rs
multisig/src/: lib.rs
multisig/tests/: general.rs
non-fungible-token/: Cargo.toml  build.sh
non-fungible-token/.cargo/: config.toml
non-fungible-token/nft/: Cargo.toml
non-fungible-token/nft/src/: lib.rs
non-fungible-token/test-approval-receiver/: Cargo.toml
non-fungible-token/test-token-receiver/: Cargo.toml
res/: airdrop.wasm  hello.wasm  lockup_contract.wasm  lockup_factory.wasm  multisig.wasm  multisig_factory.wasm  social_web3.wasm  social_web3_local.wasm  staking_pool.wasm  staking_pool_factory.wasm  state_cleanup.wasm  state_manipulation.wasm  state_replace.wasm  voting_contract.wasm  w_unc.wasm  whitelist.wasm
scripts/: README.md  deploy_core.sh  deploy_lockup.sh  master-account-id.json.sample  prepare.sh  stake-pool-factory.json.sample  voting.json.sample  whitelist.json.sample
scripts/deploy/: deploy_staking_pool_factory.sh  deploy_voting.sh  deploy_whitelist.sh
scripts/tests/: test_voting.sh
social-web3/: .gitignore  Cargo.toml  README.md  build.sh  build_docker.sh  build_local.sh  deploy.sh  test.sh  test_local.sh
social-web3/contract/: Cargo.toml  build.sh
social-web3/contract/src/: account.rs  api.rs  legacy.rs  lib.rs  node.rs  permission.rs  shared_storage.rs  storage_tracker.rs  upgrade.rs  utils.rs
social-web3/integration-tests/: Cargo.toml  build.rs
social-web3/integration-tests/src/: get_workspace_dir.rs  set.rs
social-web3/migration/: migrate.js  package.json
social-web3/res/: social_web3_local.wasm
staking-pool/: Cargo.toml  README.md  build.sh  deploy.sh
staking-pool-factory/: Cargo.toml  README.md  build.sh  deploy.sh
staking-pool-factory/src/: lib.rs  utils.rs
staking-pool-factory/src/tests/: test_utils.rs
staking-pool-factory/tests/: spec.rs  utils.rs
staking-pool/src/: internal.rs  lib.rs  test_utils.rs
staking-pool/tests/: general.rs  quickcheck.rs  utils.rs
state-manipulation/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh
state-manipulation/src/: lib.rs
unc-airdrop/: Cargo.toml  build.sh
unc-airdrop/res/: airdrop.wasm
utility-airdrop/: Cargo.toml  README.md
utility-airdrop/res/: airdrop.wasm
utility-airdrop/src/: models.rs
voting/: Cargo.toml  LICENSE  build.sh  deploy.sh
voting/src/: lib.rs
w-unc/: Cargo.toml  build.sh  deploy.sh  test.sh
w-unc/contract/: Cargo.toml
w-unc/contract/src/: legacy_storage.rs  lib.rs  w_unc.rs
w-unc/integration-tests/: Cargo.toml  README.md  build.rs
w-unc/integration-tests/src/: mod.rs  set.rs
w-unc/src/: w_unc.rs
w-unc/tests/: test_basic.rs
whitelist/: Cargo.toml  README.md  build.sh  deploy.sh
whitelist/src/: lib.rs
whitelist/src/tests/: test_utils.rs
