[workspace.package]
version = "0.1.0"
authors = ["Utility Inc hello@utnet.org"]
edition = "2021"
license = "GPL-2.0-or-later"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true


[workspace]
resolver = "2"
members = [
    "hello-utility",
    "airdrop",
    "social-web3/contract",
    "social-web3/integration-tests",
    "lockup",
    "lockup-factory",
    "staking-pool",
    "staking-pool-factory",
    "multisig",
    "multisig-factory",
    "state-manipulation",
    "voting",
    "w-unc/contract",
    "w-unc/integration-tests",
    "whitelist"
]

