[package]
name = "airdrop"
version = "0.1.0"
authors = ["Utiility Inc <hello@utnet.org>"]
edition = "2021"
license = "GPL-2.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
unc-sdk = { version = "2.3.1", features = ["unit-testing", "unstable"] }
