[package]
name = "contract"
version = "1.0.0"
authors = ["Hello Inc <hello@utnet.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { version = "0.7.3"}
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
borsh = { version = "1.4.0"}

[patch.crates-io]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
