[package]
name = "hello"
version = "1.0.0"
authors = ["Hello Inc <hello@utnet.org>"]
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { version = "2.0.6"}
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
borsh = { version = "1.3"}

