[package]
name = "hello"
version = "0.1.0"
authors = ["Utiility Inc <hello@utnet.org>"]
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { version = "2.2.1", features = ["unit-testing"]}
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]

