[package]
name = "lockup-factory"
version = "0.1.0"
authors = ["Utility Inc hello@utnet.org"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.0.6", features = ["unit-testing"]}
hex = "0.4"

[dev-dependencies]
borsh = { version = "1.3"}
