[package]
name = "lockup-contract"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.0.6", features = ["unit-testing", "unstable"] }
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
borsh = { version = "1.3"}
