[package]
name = "lockup-contract"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.3.0", features = ["unit-testing", "unstable"] }
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
lazy-static-include = "3.2.1"
unc-primitives-core = "0.10.2"
