[package]
name = "multisig"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
# Below is used for production
# crate-type = ["cdylib"]
# Below used when running simulation tests
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.0.6", features = ["unit-testing", "unstable"] }

[dev-dependencies]
borsh = { version = "1.3"}
unc-primitives-core = "0.10.2"