[package]
name = "multisig"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
# Below is used for production
# crate-type = ["cdylib"]
# Below used when running simulation tests
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
unc-sdk = { version = "2.3.1", features = ["unit-testing", "unstable"] }

[dev-dependencies]
lazy_static = "1.4.0"