[package]
name = "staking-pool-factory"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
unc-sdk = { version = "2.3.1", features = ["unit-testing", "unstable"] }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "1.0.0"
quickcheck_macros = "1.0.0"
log = "0.4"
borsh = { version = "1.3"}
env_logger = { version = "0.7.1", default-features = false }
unc-primitives = "0.10.2"
unc-crypto = "0.10.2"
