[package]
name = "staking-pool"
version = "0.4.1"
authors = ["Utility Inc <hello@utnet.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.0.6", features = ["unit-testing", "unstable"] }
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
borsh = { version = "1.3"}
unc-primitives = "0.10.2"
unc-crypto = "0.10.2"
