[package]
name = "staking-pool"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.2.1", features = ["unit-testing", "unstable"] }
uint = { version = "0.9.5", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
unc-primitives = "0.10.2"
unc-crypto = "0.10.2"
