[package]
name = "state-manipulation"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
unc-sys = "2.1.0"
wee_alloc = "0.4"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }
utility-workspaces = { version = "0.12.4", features = ["unstable"] }
anyhow = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
rand_xorshift = "0.3"
rand = "0.8.3"
borsh = { version = "1.3"}

[features]
default = ["clean", "replace"]
clean = []
replace = []
