[package]
name = "voting-contract"
version = "0.2.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unc-sdk = { version = "2.0.6", features = ["unit-testing"] }

[dev-dependencies]
borsh = { version = "1.3"}
