[package]
name = "voting-contract"
version = "0.2.0"
authors = ["Utility Inc <hello@utnet.org>"]
license = "GPL-2.0-or-later"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
unc-sdk = { version = "2.3.1", features = ["unit-testing"] }

[dev-dependencies]
