[package]
name = "social-integration-tests"
version = "0.1.0"
publish = false
edition = "2021"
license = "GPL-2.0-or-later"

[dev-dependencies]
anyhow = "1.0"
unc-units = "0.1.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.18.1", features = ["full"] }
utility-workspaces = { version = "0.12.3", features = ["unstable"] }

[[example]]
name = "set_method"
path = "src/set.rs"
